# home-ledcontroller

./: Makefile  README.md  ledserver.service  pyproject.toml
home-ledcontroller/: adapter.py  config.py  constants.py  main.py  models.py
home-ledcontroller/static/: matrix.js  styles.css
home-ledcontroller/templates/: ui.html
home_ledserver/: adapter.py  config.py  main.py
home_ledserver/static/: matrix.js
home_ledserver/templates/: ui.html
tests/: test_home_ledserver.py
